Fixed Api Bugs
