# backend/ApiSpec.yaml
@@ -12,6 +12,7 @@ info:
 paths:
   /login:
     post:
+      operationId: LogIn
       summary: Logs you in
       description: Creates a cookie providing authentication
       parameters:
@@ -115,6 +116,17 @@ paths:
                   $ref: '#/components/schemas/User'
   /CreateAccount:
     post:
+      parameters:
+        - in: query
+          name: userprofile
+          description: The userprofile to add
+          schema:
+            $ref: '#/components/schemas/User'
+        - in: query
+          name: password
+          description: The password for the new user
+          schema:
+            type: string
       summary: adds an user
       operationId: AddUser
       description: Adds an user to the system
@@ -125,12 +137,6 @@ paths:
           description: 'invalid input, object invalid'
         '409':
           description: an existing item already exists
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/User'
-        description: User to add
 components:
   securitySchemes:
     cookieAuth:         # arbitrary name for the security scheme; will be used in the "security" key later
@@ -146,6 +152,7 @@ components:
         - eMail
         - laufniveau
         - geburtsdatum
+        - geschlecht
         - ziel
         - profilbild
       properties:
